--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,6 @@ jobs:
 
     - name: Build
       run: 
-        GOOS=windows GOARCH=amd64 go build -o hersql_win.exe
-        GOOS=darwin GOARCH=amd64 go build -o hersql_mac
-        GOOS=linux GOARCH=amd64 go build -o hersql_linux
+        GOOS=windows GOARCH=amd64 go build -o hersql_win.exe;
+        GOOS=darwin GOARCH=amd64 go build -o hersql_mac;
+        GOOS=linux GOARCH=amd64 go build -o hersql_linux;
